--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,11 +7,11 @@ android {
     compileSdkVersion 28
     defaultConfig {
         applicationId "com.filter"
-        minSdkVersion 23
+        minSdkVersion 25
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
@@ -20,75 +20,71 @@ android {
         }
     }
     packagingOptions {
-        //exclude 'META-INF/DEPENDENCIES'
-        //exclude 'META-INF/LICENSE'
-        //exclude 'META-INF/LICENSE.txt'
-        //exclude 'META-INF/license.txt'
-        //exclude 'META-INF/NOTICE'
-        //exclude 'META-INF/NOTICE.txt'
-        //exclude 'META-INF/notice.txt'
-        //exclude 'META-INF/ASL2.0'
         exclude 'META-INF/atomicfu.kotlin_module'
     }
 }
 
-//kapt {
-//    generateStubs = false
-//}
+//kapt {generateStubs = false}
 
 dependencies {
 
     def kotlin_version = "1.3.30"
-    def lifecycle_version = "1.1.1"
+    def coroutines_version = "1.2.0"
+    def support_version = "1.0.2"
+    def lifecycle_version = "2.0.0"
     //def room_version = "1.1.1"
-    def support_version = "28.0.0"
-    def retrofit_version = "2.4.0"
-    def dagger_version = "2.20"
+    def retrofit_version = "2.5.0"
+    def okhttp_version = "3.12.1"
+    def gson_version = "2.8.5"
+    def rxjava_version = "2.2.8"
+    def dagger_version = "2.22.1"
     def glide_version = "4.9.0"
+    def paging_version = "2.1.0"
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'org.jetbrains:annotations:16.0.1'
     //Kotlin
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    //Kotlin Coroutines dependencies
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.2.0"
+    //Kotlin Coroutines
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version"
     //Basic
-    implementation "com.android.support:appcompat-v7:$support_version"
-    implementation "com.android.support:design:$support_version"
-    implementation "com.android.support:recyclerview-v7:$support_version"
-    implementation "com.android.support.constraint:constraint-layout:1.1.3"
+    implementation "androidx.appcompat:appcompat:$support_version"
+    implementation "com.google.android.material:material:1.0.0"
+    implementation "androidx.recyclerview:recyclerview:1.0.0"
+    implementation "androidx.constraintlayout:constraintlayout:1.1.3"
     //LiveData and ViewModel
-    implementation "android.arch.lifecycle:extensions:$lifecycle_version"
-    implementation "android.arch.lifecycle:reactivestreams:$lifecycle_version"
-    implementation "com.android.support:support-v4:$support_version"
-    annotationProcessor "android.arch.lifecycle:compiler:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
+    kapt "androidx.lifecycle:lifecycle-compiler:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-reactivestreams-ktx:$lifecycle_version"
     //Room(local)
     //implementation "android.arch.persistence.room:runtime:$room_version"
     //implementation "android.arch.persistence.room:rxjava2:$room_version"
-    //annotationProcessor "android.arch.persistence.room:compiler:$room_version"
+    //kapt "android.arch.persistence.room:compiler:$room_version"
     //Retrofit
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
     implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
     implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofit_version"
-    implementation "com.squareup.okhttp3:okhttp:3.11.0"//3.14.1 3.11.0
-    implementation "com.squareup.okhttp3:logging-interceptor:3.11.0"
-    implementation "com.google.code.gson:gson:2.8.5"
+    implementation "com.squareup.okhttp3:okhttp:$okhttp_version"
+    implementation "com.squareup.okhttp3:logging-interceptor:$okhttp_version"
+    implementation "com.google.code.gson:gson:$gson_version"
     //RxJava
-    implementation "io.reactivex.rxjava2:rxjava:2.2.5"//2.2.8
-    implementation "io.reactivex.rxjava2:rxandroid:2.1.0"//2.1.1
+    implementation "io.reactivex.rxjava2:rxjava:$rxjava_version"
+    implementation "io.reactivex.rxjava2:rxandroid:2.1.1"
     //Dagger2
     implementation "com.google.dagger:dagger:$dagger_version"
     kapt "com.google.dagger:dagger-compiler:$dagger_version"
-    //annotationProcessor "com.google.dagger:dagger-compiler:$dagger_version"
-    implementation "com.google.dagger:dagger-android:$dagger_version"//2.22.1
-    implementation "com.google.dagger:dagger-android-support:$dagger_version"// if you use the support libraries 2.22.1
-    annotationProcessor "com.google.dagger:dagger-android-processor:$dagger_version"
-    //glide
+    implementation "com.google.dagger:dagger-android:$dagger_version"
+    implementation "com.google.dagger:dagger-android-support:$dagger_version"
+    kapt "com.google.dagger:dagger-android-processor:$dagger_version"
+    //Glide
     implementation "com.github.bumptech.glide:glide:$glide_version"
-    annotationProcessor "com.github.bumptech.glide:compiler:$glide_version"
+    kapt "com.github.bumptech.glide:compiler:$glide_version"
+    //Paging
+    implementation "androidx.paging:paging-runtime-ktx:$paging_version"
+    implementation "androidx.paging:paging-rxjava2-ktx:$paging_version"
     //Other
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    implementation 'org.jetbrains:annotations:16.0.1'
+    androidTestImplementation 'androidx.test:runner:1.1.1'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
     //implementation project(':XXXXXX')
 }
